<resources>
    <string name="app_name">iPatient</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="remember_me">Recordarme</string>
    <string name="login">Log In</string>
    <string name="no_account_register">No tengo cuenta. Registrarse.</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="identityNumber">DNI</string>
    <string name="have_account">Ya tengo cuenta. Entrar.</string>
    <string name="register">Registro</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="phone">Teléfono</string>
    <string name="text_add_clinic">Agregar una clínica</string>
    <string name="text_connect_clinic">Conectarse a una clínica</string>
    <string name="edit_clinic_name">Nombre de la clinica</string>
    <string name="edit_direction">Dirección (opcional)</string>
    <string name="clinic_register">Registrar clínica</string>
    <string name="edit_description">Introduce una descripción (opcional)</string>
    <string name="edit_cif">CIF (Opcional)</string>
    <string name="enter_email">Introduce tu correo electrónico y te enviaremos una contraseña nueva.</string>
    <string name="password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="text_send">Enviar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="clinic_password">Contraseña de la clínica</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="clinic_name">Nombre de la clinica</string>
    <string name="dont_find_clinic">No encuentras tu clínica?\nCrea la tuya aquí.</string>
    <string name="patient_name">Nombre del paciente</string>
    <string name="patient_surname">Apellidos</string>
    <string name="patient_identity_number">DNI</string>
    <string name="patient_born_date">Fecha de nacimiento</string>
    <string name="patient_injury">Lesión</string>
    <string name="patient_treatment">Tratamiento</string>
    <string name="add_patient">Añadir paciente</string>
    <string name="history">Historial</string>
    <string name="fisiotherapy">Fisioterapia</string>
    <string name="psychology">Psicología</string>
    <string name="visit_reason">MOTIVO DE VISITA</string>
    <string name="exploration">EXPLORACIÓN</string>
    <string name="treatment">TRATAMIENTO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tecnic_assistance">Asistencia técnica</string>
    <string name="add_profile_photo">Añadir foto de Perfil</string>
    <string name="permission_needed">Permisos necesarios</string>
    <string name="grant_permission">Para continuar es necesario que actives manualmente los permisos de almacenamiento.\nPermisos -> Almacenamiento</string>
    <string name="text_accept">Aceptar</string>
    <string name="regular_medication">Medicación Habitual</string>
    <string name="medic_conditions">Afecciones Médicas</string>
    <string name="regular_exercise">Ejercicio Habitual</string>
    <string name="surgical_operations">Operaciones Quirúrgicas</string>
    <string name="medic_examination">Reconocimientos Médicos</string>
    <string name="born_date">Fecha de nacimiento:</string>
    <string name="identity_number">DNI:</string>
    <string name="number_phone">Teléfono:</string>
    <string name="patient_email">Email:</string>
    <string name="profession">Profesión:</string>
    <string name="patient_full_name">Nombre del Paciente</string>
    <string name="patient_profession">Profesión</string>
    <string name="text_no_data">No hay datos para mostrar</string>
    <string name="no_clinic_added">No hay clínicas para mostrar</string>
    <string name="category">Categoría</string>
    <string name="issue">Asunto</string>
    <string name="description">Descripción</string>
    <string name="add_your_profile_photo">Añade tu foto de perfil</string>
    <string name="add_clinic_image">Añade una foto a tu clínica</string>
    <string name="query">Consulta</string>
    <string name="suggestion">Sugerencia</string>
    <string name="report_bug">Reportar problema</string>
    <string name="disconnect">Desconectarse</string>
    <string name="text_configuration">Configuración</string>
    <string name="welcome">Bienvenid@</string>
    <string name="text_start">Pulsa este botón para desplegar un menú lateral en el cual podrás crear una clínica, agregar una clínica ya existente y/o solicitar asistencia.</string>
    <string name="text_patient_list">Aquí se mostrará una lista de pacientes de la clínica seleccionada en el menú lateral que hayas creado y/o agregado.</string>
    <string name="text_add_patient">Pulsa este botón para agregar un nuevo paciente.</string>
    <string name="understand">Entendido</string>
    <string name="accept_terms_conditions">Acepto los términos y condiciones</string>
    <string name="terms_conditions">TÉRMINOS Y CONDICIONES</string>
    <string name="general_conditions">- Condiciones generales de uso</string>
    <string name="general_conditions_text"><![CDATA[<p>“iPatient” es una app de organización de los historiales y sesiones de pacientes para profesionales médicos y/o sanitarios, que busca una gestión centralizada y organizada de los mismos. Su uso fuera de esta condición esta estrictamente prohibido, y se insta a todos los usuarios a utilizar “iPatient” mediante lo estipulado en la ley.</p><p>Asimismo se prohibe la difusión de contenidos inapropiados y discriminatorios, así como la introducción de publicidad o la suplantación de identidad</p>]]></string>
    <string name="intelectual_property">- Propiedad intelectual e industrial</string>
    <string name="intelectual_property_text"><![CDATA[<p>“iPatient” se reserva todos los derechos de las marcas, nombres comerciales, signos distintivos y patentes, y la propiedad intelectual del contenido y diseño de la aplicación.</p><p>Asimismo se reserva todos los derechos de contenidos de la app, tales como textos, gráficos, imágenes, diseño, etc...</p>]]></string>
    <string name="responsability_exclusion">- Exclusión de responsabilidad</string>
    <string name="responsability_exclusion_text"><![CDATA[<p>“iPatient” no será responsable de los daños y perjuicios causados al usuario como consecuencia de la indisponibilidad, fallos de acceso y falta de continuidad de la aplicación móvil y sus servicios.</p>]]></string>
    <string name="privacy_policy">- Condiciones generales de uso</string>
    <string name="privacy_policy_text"><![CDATA[<p>En cumplimiento de lo establecido en el REGLAMENTO (UE) 2016/679 DEL PARLAMENTO EUROPEO Y DEL CONSEJO de 27 de abril de 2016, le comunicamos que los datos que usted nos facilite quedarán incorporados y serán tratados en los ficheros titularidad de “iPatient” con la finalidad de poderle prestar nuestros servicios, así como para mantenerle informado sobre cuestiones relativas a la actividad de la empresa y sus servicios.</p><p>Mediante la firma del presente documento usted da su consentimiento expreso e inequívoco para que “iPatient” pueda utilizar solo para este fin concreto los datos facilitados por usted, comprometiéndose a tratar de forma confidencial los datos de carácter personal facilitados y a no comunicar o ceder dicha información a terceros.</p><p>Asimismo, le informamos de la posibilidad que tiene de ejercer los derechos establecidos por la normativa vigente, para ello debe dirigir un email a “iPatient”, con dirección “oscarjambrinaserrano@icloud.com”, indicando en el asunto “LOPD” y adjuntando copia de DNI.</p>]]></string>
    <string name="bug_replication">Por favor, si vas a enviar un reporte de un fallo de la aplicación, en el campo descripción detalla los pasos que seguiste hasta que te sucedió el error, para poder replicarlo y arreglarlo en una futura actualización. Muchas gracias.</string>
    <string name="patient_data">En estas dos primeras tarjetas se mostrarán los datos personales del paciente</string>
    <string name="patient_health">En estas tarjetas se mostrarán los datos referentes a la salud del paciente</string>
    <string name="patient_add_health_info">Mediante el botón “+” podrás añadir datos, así como eliminarlos con el botón “-”</string>
    <string name="session_info">Aquí se mostrará una lista de sesiones de los pacientes, con la fecha de la sesión y los datos destacados de la misma en caso de tenerlos.</string>
    <string name="session_detail">Pulsando en la tarjeta se expandirá mostrando la información referente a la sesión, pulsando sobre el botón “+” se podrán añadir elementos y pulsando sobre el “-” se podrán eliminar, pulsando sobre &#9733; podremos añadirlos o eliminarlos de los datos destacados de la sesión</string>
    <string name="text_add_session">Pulsa brevemente para añadir una nueva sesión del día actual, o haz una pulsación larga para mostrar un selector de fechas y añadir una sesión de la fecha deseada</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="text_cif">CIF</string>
    <string name="text_direction">Dirección</string>
    <string name="text_description">Descripción</string>
    <string name="optional">(Opcional)</string>
    <string name="insert_data">Introduzca datos</string>
</resources>