<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".UI.home.assistance.TecnicAssistanceActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layout_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_round_border"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/category"
                android:textAlignment="center"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/issue"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:minLines="5"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/text_send" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_bug_replication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/bug_replication"
        android:visibility="gone" />
</LinearLayout>