<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border_dialog"
    android:gravity="center">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_close"
        android:padding="8dp" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/password_forgotten"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_email"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/edit_recover_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_edit_email"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/text_send"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp" />
</RelativeLayout>