<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".UI.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/gradient_background_round_border"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:src="@drawable/app_logo_circle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/edit_email"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/white">

                <EditText
                    android:id="@+id/login_password"
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:padding="4dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white" />

            <CheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:buttonTint="@android:color/white"
                android:text="@string/remember_me"
                android:textColor="@android:color/white" />


            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/round_corner">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_no_account"
                style="@style/LoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_account_register"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>