<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".UI.login.RegisterActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:layout_width="wrap_content"
                style="@style/RegisterTextView"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edit_name"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/name"
                android:singleLine="true" />

            <TextView
                style="@style/RegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/edit_surname"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/surname"
                android:singleLine="true"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                style="@style/RegisterTextView"
                android:layout_height="wrap_content"
                android:text="@string/identityNumber" />

            <EditText
                android:id="@+id/edit_identity_number"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/identityNumber"
                android:singleLine="true" />

            <TextView
                style="@style/RegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                style="@style/RegisterTextView"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/edit_phone"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/phone"
                android:inputType="phone"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                style="@style/RegisterTextView"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edit_password"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                style="@style/RegisterTextView"
                android:layout_height="wrap_content"
                android:text="@string/password_repeat" />

            <EditText
                android:id="@+id/edit_password_repeat"
                style="@style/RegisterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password_repeat"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="32dp">

                <CheckBox
                    android:id="@+id/checkbox_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/white" />

                <TextView
                    android:id="@+id/text_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    android:text="@string/accept_terms_conditions"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/add_profile_photo"
                android:textColor="@android:color/white" />

            <RelativeLayout
                android:id="@+id/layout_profile_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/image_camera_profile"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_camera_black_24dp"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/layout_background_delete_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/white_circle"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/delete_background_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_delete" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_corner">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/have_account"
                style="@style/RegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="8dp"
                android:text="@string/have_account" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>